--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,7 @@
 :root {
   --main-color: #262626;
   --primary-color: #ae00ffa8;
+  --icon-color: #56007f;
   --border-color: rgba(221, 59, 213, 0.884);
   --nav_color: rgba(10, 10, 10, 0.801);
   --background-color: rgba(0, 0, 0, 0.849);
@@ -152,7 +153,7 @@ btn:hover {
 }
 
 .content {
-  padding: 100px 0px 15px 0;
+  padding: 275px 0px 15px 0;
 }
 
 #particles-js {
@@ -168,7 +169,7 @@ btn:hover {
   top: 0;
   left: 0;
   width: 100%;
-  height: 623px;
+  height: 13%;
 }
 
 .main_content {
@@ -212,7 +213,7 @@ hr {
 
 #page2 {
   position: absolute;
-  top: 460px;
+  top: 630px;
 }
 
 .scroll-down {
@@ -351,6 +352,7 @@ hr {
   margin: 0;
   text-align: center;
   padding-bottom: 100px;
+  color: var(--icon-color);
 }
 
 .list_service .service {
@@ -546,7 +548,7 @@ hr {
 }
 
 .img__description a:hover {
-  color: #262626;
+  color: var(--icon-color);
 }
 
 .img__wrap:hover .img__description {
